# chicken-dinner

./: .flake8  .gitignore  CHANGELOG.rst  CONTRIBUTORS.rst  HISTORY.rst  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README.rst  deploy.sh  pyproject.toml  readthedocs.yml  setup.py
chicken_dinner/: __init__.py  __version__.py  _version.py  constants.py  core.py  pubg.py  rate_limiter.py  structures.py  util.py
chicken_dinner/assets/: dictionary.json  dictionary.py  maps.py
chicken_dinner/cli/: cli.py
chicken_dinner/models/: __init__.py  constants.py  leaderboard.py  player.py  player_season.py  players.py  samples.py  season.py  seasons.py  status.py  tournament.py  tournaments.py
chicken_dinner/models/match/: __init__.py  asset.py  match.py  participant.py  roster.py
chicken_dinner/models/telemetry/: __init__.py  events.py  objects.py  telemetry.py
chicken_dinner/pubgapi/: __init__.py  core.py  pubg.py  rate_limiter.py
chicken_dinner/visual/: maps.py  match.py  playback.py
docs/: Makefile  conf.py  examples.rst  index.rst  make.bat  notes.rst  requirements.txt  sample.rst  sample_erangel.rst  sample_karakin.rst  sample_miramar.rst  sample_sanhok.rst  sample_vikendi.rst
docs/assets/: assets.rst  maps.rst
docs/cli/: cli.rst
docs/models/: api.rst  match.rst  telemetry.rst  tournament.rst
docs/pubgapi/: core.rst  pubg.rst
docs/samples/: karakin.html
docs/visual/: playback.rst
tests/: test_animation.py  test_game_mode.py  test_limiter.py  test_map.py  test_specific_match.py  test_telemetry.py  test_tournaments.py
