[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "chicken-dinner"
version = "0.8.0"
description = ""
authors = ["Christopher Flynn <crf204@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
matplotlib = "^3.1"
pillow = "^6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
vcrpy = "^2.1"
sphinx = "^2.1"
sphinx-rtd-theme = "^0.4.3"
sphinx-autobuild = "^0.7.1"
twine = "^1.13"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
