[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
force_single_line = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[tool.poetry]
name = "chicken_dinner"
version = "0.11.0"
description = "PUBG JSON API Wrapper and Game Telemetry Visualizer"
authors = ["Christopher Flynn <crf204@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/crflynn/chicken-dinner"
repository = "https://github.com/crflynn/chicken-dinner"
documentation = "https://chicken-dinner.readthedocs.io/en/latest/"
keywords = ["pubg", "api", "animation", "chicken", "dinner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: First Person Shooters",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]
include = [
    "CHANGELOG.rst",
    "CONTRIBUTORS.rst",
    "chicken_dinner/assets/maps/*Main_Low_Res.*",
    "chicken_dinner/assets/dictionary.json",
]
exclude = [
    "chicken_dinner/assets/maps/*High_Res.*",
    "chicken_dinner/assets/maps/*No_Text*",
]

[tool.poetry.plugins.console_scripts]
chicken-dinner = "chicken_dinner.cli:cli"

[tool.poetry.extras]
visual = ["matplotlib", "pillow"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
matplotlib = { version = "^3.1", optional = true }
pillow = { version = "^6.2", optional = true }
click = "^7.0"
tabulate = "^0.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
vcrpy = "^2.1"
sphinx = "^2.1"
sphinx-rtd-theme = "^0.4.3"
sphinx-autobuild = "^0.7.1"
twine = "^1.13"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
